fix chrome scrollbar invinsible

--- a/client/src/components/Burger/Burger.module.css
+++ b/client/src/components/Burger/Burger.module.css
@@ -38,6 +38,9 @@
 
 
 }
+::-webkit-scrollbar {
+  display: none;
+}
 
 
 @media(max-width: 598px) {
